style.css
html{
    scroll-behavior: smooth;
}
*{
    margin:0 0 0 0;
    
    /* background-color: rgb(246, 244, 243); */
    font-family: San -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
body{
        background-color: rgb(246, 244, 243);

}
#nameContainer{
     /* border: 2px red solid; */
     height: 100vh;
     /* position: absolute; */
     display: flex;
     justify-content: start;
     align-items: center;
     padding-right:20vw;
     margin-left:270px;
}

#name{
    font-size: 60px;
    color:rgb(42, 46, 45);
    border:none;
    width: 40vw;

}
a{
    text-decoration: none;
    color: rgb(42, 46, 45)
}
#navigation {
    
    /* margin-top: 35vh; */
    /* margin-bottom: 20vh; */
    height:100%;
    position: relative;
    display: flex;
    align-items: center;
    background-image: blue;
    /* z-index: 2; */
    /* border: 1px red solid; */
}

#navUl{
    
    display:block;
    position:fixed;
    font-weight: 600;
    font-size: 35px;
    list-style: none;
    padding:0 0 0 0;
    /* height:90px; */
    margin: 0 0 100vh 0;
    /* border: 1px red solid; */
  
}

.navBtns{

    /* border: 2px red solid; */
    color: rgb(42, 46, 45);
    /* position:s; */
    display: flex;
    justify-content: end;
    align-items:center;
    
    margin: 10px 0px 10px 0px;
    
    padding:0 10px 0 25px;
    border-right: 5px rgba(52, 52, 250, 0) solid;
}


#container{
    display: flex;
    justify-content:center;
}
.about{
    box-shadow: 1px 7px 18px rgb(191, 191, 191);
    color:rgb(255, 255, 255);
    position:relative;
    padding: 28px 28px 38px 28px;
    border-radius: 20px;
    height: fit-content;
    margin-top: 25vh;
    margin-bottom: 30vh;
    overflow:visible;
    background-image: linear-gradient(to right, rgb(130, 176, 255) , rgb(16, 185, 247));
}
.about h3{
    /* border: 1px red solid; */
    text-align: start;
    border-radius: 13px;
    font-size: 39px;
    padding: 13px 12px 13px 13px
}
.para {
    position:relative;
    /* background: -webkit-linear-gradient(rgb(109, 109, 109), rgb(0, 80, 201)); */
  /* -webkit-background-clip: text; */
  /* -webkit-text-fill-color: transparent; */
    font-size: 20px;
    font-weight: 600;
    margin-right:0;
    text-align: justify;
    padding: 0px 13px 19px 13px;
    width:550px;
    height: fit-content;
    border-radius: 15px;
}





#projectsDiv{
    /* border:2px red solid; */
    display: block;
    height: 30vh;
    justify-content: start;
    padding-left: 20vw;
}

#projectsDiv h3{
    /* PROJECTS  */
    /* border:2px blue solid; */

    padding-top: 0px;
    text-align: start;
    margin-top: 10vh;
    font-size: 55px;
    width: fit-content;
    margin-bottom: 9vh;
}
#projectContainer h1{
    /* border:2px green solid; */

    margin-top:0vh;
    font-size: 30px;
    width: 150px;
}
#projectContainer p{
    /* border:2px red solid; */

    font-size: 20px;
    font-weight: 600;
    width: 285px;
    margin-bottom: 3vh;
}
#projectContainer{
    /* border:2px rgb(187, 187, 0) solid; */
    padding-left: 20vw;
    display: block;
    height: 30vh;
    position: absolute;
    transform: translateY(-520px);
    /* padding-bottom: 70vh; */
    /* bottom: 2vh; */
}
#imgContainer{
    /* border:2px red solid; */

    margin-left:50vw;

}
#imgSc{
    bottom: 40vh;
    left: 28vw;
    height: 35vh;
    margin-bottom: 28vh;
    padding: 25px;
    background-image: linear-gradient(to right, rgba(4, 53, 126, 0.988) , rgb(53, 201, 255));
    border-radius: 40px;
    box-shadow: 1px 13px 18px rgb(191, 191, 191);

}

#liveDemoBtn{
    padding: 13px;
    font-size: 15px;
    color:white;
    font-weight: 700;
    border-radius: 20px;
        box-shadow: 2px 3px 5px rgb(216, 216, 216);

    margin-top: 60px;
    /* border: 2px rgba(0, 0, 255, 0) solid; */
    /* z-index: 2; */
    background-image: linear-gradient(to right, rgba(4, 53, 126, 0.988) , rgb(32, 130, 165));

}
#herokuDemoBtn{
    padding: 13px;
    font-size: 15px;
    color:white;
    font-weight: 700;
    border-radius: 20px;
        box-shadow: 2px 3px 5px rgb(216, 216, 216);
    margin-left: 15px;
    margin-top: 60px;
    background-image: linear-gradient(to right, rgba(4, 53, 126, 0.988) , rgb(32, 130, 165));

}
#herokuDemoBtn:hover{
    box-shadow: 1px 3px 5px rgb(216, 216, 216);

    outline: 2px solid rgb(11, 60, 255);
    border-radius: 17px;
    outline-offset: 2px;
    background-color: rgba(0, 0, 0, 0);
    
}
#liveDemoBtn:hover{
    box-shadow: 1px 3px 5px rgb(216, 216, 216);
    outline: 2px solid rgb(11, 60, 255);
    border-radius: 17px;
    outline-offset: 2px;
    background-color: rgba(0, 0, 0, 0);
    
}
#resumeBtn:hover{
    outline: 2px solid rgb(39, 162, 160);
    outline-offset: 2px;
    background-color: rgba(0, 0, 0, 0);
    
}
#resumeBtn{
    position:absolute;
    padding:9px;
    font-size: 13px;
    color:white;
    font-weight: 700;
    border-radius: 12px;
   margin:20px 20px 20px 20px;
    background-image: linear-gradient(to right, rgba(4, 53, 126, 0.988) , rgb(65, 141, 189));

}

.contactDiv{
    margin-top: 30vh;
   margin-bottom: 70px;
    font-size: 30px;
    color:rgb(42, 46, 45);
    display: block;
    text-align: center;
    height:13vh;
}
.contactDiv p{

height: fit-content;
position: static;
height: 30ch;
}

i{
    margin-left:12px;
    margin-bottom:1px;

  font-size: 50px;
}
#iconsForContact{
    display: block;

}
.class{
    
    background-image: linear-gradient(to right, rgba(4, 53, 126, 0.988) , rgb(65, 141, 189));
    width: fit-content;
    font-weight: 700;
    font-size: 30px;
    text-align: center;
    margin-bottom: 20vh;
}
.email{
     /* font-size: 20px; */
    color:rgb(42, 46, 45);
    display: flex;
    justify-content: center;
    margin-bottom: 40vh;
    font-weight: 700;
    font-size: 30px;
}
.contactMeIcon{
    height:30px;
    width: 30px;

}
/* ... */

